--- a/antora/components/refguide-index/modules/applib/pages/index/services/appfeatui/ApplicationType.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/appfeatui/ApplicationType.adoc
@@ -10,6 +10,7 @@ class ApplicationType {
   public static final String LOGICAL_TYPE_NAME;
   ApplicationType()
   ApplicationType(ApplicationFeatureId featureId)
+  ApplicationType(String memento)
   List<ApplicationTypeAction> getActions()
   List<ApplicationTypeProperty> getProperties()
   List<ApplicationTypeCollection> getCollections()
