--- a/antora/components/refguide-index/modules/applib/pages/index/services/appfeatui/ApplicationTypeAction.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/appfeatui/ApplicationTypeAction.adoc
@@ -10,6 +10,7 @@ class ApplicationTypeAction {
   public static final String LOGICAL_TYPE_NAME;
   ApplicationTypeAction()
   ApplicationTypeAction(ApplicationFeatureId featureId)
+  ApplicationTypeAction(String memento)
   String getReturnType()
   SemanticsOf getActionSemantics()
 }
