--- a/antora/components/refguide-index/modules/applib/pages/index/services/appfeatui/ApplicationTypeCollection.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/appfeatui/ApplicationTypeCollection.adoc
@@ -10,6 +10,7 @@ class ApplicationTypeCollection {
   public static final String LOGICAL_TYPE_NAME;
   ApplicationTypeCollection()
   ApplicationTypeCollection(ApplicationFeatureId featureId)
+  ApplicationTypeCollection(String memento)
   String getElementType()
   boolean isDerived()
 }
