--- a/antora/components/refguide-index/modules/applib/pages/index/services/appfeatui/ApplicationTypeMember.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/appfeatui/ApplicationTypeMember.adoc
@@ -9,6 +9,7 @@
 class ApplicationTypeMember {
   public static final String LOGICAL_TYPE_NAME;
   ApplicationTypeMember(ApplicationFeatureId featureId)
+  ApplicationTypeMember(String memento)
   String getMemberName()
 }
 ----
