--- a/antora/components/refguide-index/modules/applib/pages/index/services/appfeatui/ApplicationTypeProperty.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/appfeatui/ApplicationTypeProperty.adoc
@@ -10,6 +10,7 @@ class ApplicationTypeProperty {
   public static final String LOGICAL_TYPE_NAME;
   ApplicationTypeProperty()
   ApplicationTypeProperty(ApplicationFeatureId featureId)
+  ApplicationTypeProperty(String memento)
   String getReturnType()
   boolean isDerived()
   Integer getMaxLength()
