--- a/antora/components/refguide-index/modules/applib/pages/index/services/iactnlayer/InteractionService.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/iactnlayer/InteractionService.adoc
@@ -23,10 +23,10 @@ interface InteractionService {
   void run(InteractionContext interactionContext, ThrowingRunnable runnable)     // <.>
   R callAnonymous(Callable<R> callable)     // <.>
   void runAnonymous(ThrowingRunnable runnable)     // <.>
-  Result<R> callAndCatch(InteractionContext interactionContext, Callable<R> callable)     // <.>
-  Result<Void> runAndCatch(InteractionContext interactionContext, ThrowingRunnable runnable)     // <.>
-  Result<R> callAnonymousAndCatch(Callable<R> callable)     // <.>
-  Result<Void> runAnonymousAndCatch(ThrowingRunnable runnable)     // <.>
+  Try<R> callAndCatch(InteractionContext interactionContext, Callable<R> callable)     // <.>
+  Try<Void> runAndCatch(InteractionContext interactionContext, ThrowingRunnable runnable)     // <.>
+  Try<R> callAnonymousAndCatch(Callable<R> callable)     // <.>
+  Try<Void> runAnonymousAndCatch(ThrowingRunnable runnable)     // <.>
 }
 ----
 
@@ -69,22 +69,22 @@ As per _#callAnonymous(Callable)_ , but for a runnable.
 <.> xref:#callAndCatch__InteractionContext_Callable[callAndCatch(InteractionContext, Callable)]
 +
 --
-Variant of _#call(InteractionContext, Callable)_ that wraps the return value with a xref:refguide:commons:index/functional/Result.adoc[Result] , also catching any exception, that might have occurred.
+Variant of _#call(InteractionContext, Callable)_ that wraps the return value with a xref:refguide:commons:index/functional/Try.adoc[Try] , also catching any exception, that might have occurred.
 --
 <.> xref:#runAndCatch__InteractionContext_ThrowingRunnable[runAndCatch(InteractionContext, ThrowingRunnable)]
 +
 --
-Variant of _#run(InteractionContext, ThrowingRunnable)_ that returns a xref:refguide:commons:index/functional/Result.adoc[Result] of _Result_ , also catching any exception, that might have occurred.
+Variant of _#run(InteractionContext, ThrowingRunnable)_ that returns a xref:refguide:commons:index/functional/Try.adoc[Try] of _Result_ , also catching any exception, that might have occurred.
 --
 <.> xref:#callAnonymousAndCatch__Callable[callAnonymousAndCatch(Callable)]
 +
 --
-Variant of _#callAnonymous(Callable)_ that wraps the return value with a xref:refguide:commons:index/functional/Result.adoc[Result] , also catching any exception, that might have occurred.
+Variant of _#callAnonymous(Callable)_ that wraps the return value with a xref:refguide:commons:index/functional/Try.adoc[Try] , also catching any exception, that might have occurred.
 --
 <.> xref:#runAnonymousAndCatch__ThrowingRunnable[runAnonymousAndCatch(ThrowingRunnable)]
 +
 --
-Variant of _#runAnonymous(ThrowingRunnable)_ that returns a xref:refguide:commons:index/functional/Result.adoc[Result] of _Result_ , also catching any exception, that might have occurred.
+Variant of _#runAnonymous(ThrowingRunnable)_ that returns a xref:refguide:commons:index/functional/Try.adoc[Try] of _Try_ , also catching any exception, that might have occurred.
 --
 
 == Members
@@ -138,19 +138,19 @@ As per _#callAnonymous(Callable)_ , but for a runnable.
 [#callAndCatch__InteractionContext_Callable]
 === callAndCatch(InteractionContext, Callable)
 
-Variant of _#call(InteractionContext, Callable)_ that wraps the return value with a xref:refguide:commons:index/functional/Result.adoc[Result] , also catching any exception, that might have occurred.
+Variant of _#call(InteractionContext, Callable)_ that wraps the return value with a xref:refguide:commons:index/functional/Try.adoc[Try] , also catching any exception, that might have occurred.
 
 [#runAndCatch__InteractionContext_ThrowingRunnable]
 === runAndCatch(InteractionContext, ThrowingRunnable)
 
-Variant of _#run(InteractionContext, ThrowingRunnable)_ that returns a xref:refguide:commons:index/functional/Result.adoc[Result] of _Result_ , also catching any exception, that might have occurred.
+Variant of _#run(InteractionContext, ThrowingRunnable)_ that returns a xref:refguide:commons:index/functional/Try.adoc[Try] of _Result_ , also catching any exception, that might have occurred.
 
 [#callAnonymousAndCatch__Callable]
 === callAnonymousAndCatch(Callable)
 
-Variant of _#callAnonymous(Callable)_ that wraps the return value with a xref:refguide:commons:index/functional/Result.adoc[Result] , also catching any exception, that might have occurred.
+Variant of _#callAnonymous(Callable)_ that wraps the return value with a xref:refguide:commons:index/functional/Try.adoc[Try] , also catching any exception, that might have occurred.
 
 [#runAnonymousAndCatch__ThrowingRunnable]
 === runAnonymousAndCatch(ThrowingRunnable)
 
-Variant of _#runAnonymous(ThrowingRunnable)_ that returns a xref:refguide:commons:index/functional/Result.adoc[Result] of _Result_ , also catching any exception, that might have occurred.
+Variant of _#runAnonymous(ThrowingRunnable)_ that returns a xref:refguide:commons:index/functional/Try.adoc[Try] of _Try_ , also catching any exception, that might have occurred.
