--- a/antora/components/refguide-index/modules/applib/pages/index/value/semantics/Renderer.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/value/semantics/Renderer.adoc
@@ -7,19 +7,30 @@
 .Renderer.java
 ----
 interface Renderer<T> {
-  String simpleTextPresentation(ValueSemanticsProvider.Context context, T value)     // <.>
+  String titlePresentation(ValueSemanticsProvider.Context context, T value)     // <.>
+  String htmlPresentation(ValueSemanticsProvider.Context context, T value)     // <.>
 }
 ----
 
-<.> xref:#simpleTextPresentation__ValueSemanticsProvider.Context_T[simpleTextPresentation(ValueSemanticsProvider.Context, T)]
+<.> xref:#titlePresentation__ValueSemanticsProvider.Context_T[titlePresentation(ValueSemanticsProvider.Context, T)]
 +
 --
-The value in its read-only summarizing text presentation form. (irreversible)
+The value in its read-only summarizing text presentation form. (title form)
+--
+<.> xref:#htmlPresentation__ValueSemanticsProvider.Context_T[htmlPresentation(ValueSemanticsProvider.Context, T)]
++
+--
+The value rendered as HTML.
 --
 
 == Members
 
-[#simpleTextPresentation__ValueSemanticsProvider.Context_T]
-=== simpleTextPresentation(ValueSemanticsProvider.Context, T)
+[#titlePresentation__ValueSemanticsProvider.Context_T]
+=== titlePresentation(ValueSemanticsProvider.Context, T)
 
-The value in its read-only summarizing text presentation form. (irreversible)
+The value in its read-only summarizing text presentation form. (title form)
+
+[#htmlPresentation__ValueSemanticsProvider.Context_T]
+=== htmlPresentation(ValueSemanticsProvider.Context, T)
+
+The value rendered as HTML.
