ISIS-2297: updates site index

--- a/antora/components/refguide-index/modules/commons/pages/index/functional/Try.adoc
+++ b/antora/components/refguide-index/modules/commons/pages/index/functional/Try.adoc
@@ -36,22 +36,22 @@ interface Try<T> {
 <.> xref:#getValue__[getValue()]
 +
 --
-Optionally returns the contained _value_ based on presence, that is, if its a _Success_ and the value is not _null_ .
+Optionally returns the contained _value_ based on presence, that is, if this is a _Success_ and the value is not _null_ .
 --
 <.> xref:#getFailure__[getFailure()]
 +
 --
-Optionally returns the contained _failure_ based on presence, that is, if its a _Failure_ .
+Optionally returns the contained _failure_ based on presence, that is, if this is a _Failure_ .
 --
 <.> xref:#ifSuccess__Consumer[ifSuccess(Consumer)]
 +
 --
-Peeks into the _value_ if its a _Success_ .
+Peeks into the _value_ if this is a _Success_ .
 --
 <.> xref:#ifFailure__Consumer[ifFailure(Consumer)]
 +
 --
-Peeks into the _failure_ if its a _Failure_ .
+Peeks into the _failure_ if this is a _Failure_ .
 --
 <.> xref:#ifFailureFail__[ifFailureFail()]
 +
@@ -66,17 +66,17 @@ Throws _NoSuchElementException_ if _value_ is _null_ .
 <.> xref:#mapSuccess__Function[mapSuccess(Function)]
 +
 --
-Maps this xref:refguide:commons:index/functional/Try.adoc[Try] to another if its a _Success_ . Otherwise if its a _Failure_ acts as identity operator.
+Maps this xref:refguide:commons:index/functional/Try.adoc[Try] to another if this is a _Success_ . Otherwise if this is a _Failure_ acts as identity operator.
 --
 <.> xref:#mapFailure__UnaryOperator[mapFailure(UnaryOperator)]
 +
 --
-Maps this xref:refguide:commons:index/functional/Try.adoc[Try] to another if its a _Failure_ . Otherwise if its a _Success_ acts as identity operator.
+Maps this xref:refguide:commons:index/functional/Try.adoc[Try] to another if its a _Failure_ . Otherwise if this is a _Success_ acts as identity operator.
 --
 <.> xref:#mapEmptyToFailure__[mapEmptyToFailure()]
 +
 --
-Maps this xref:refguide:commons:index/functional/Try.adoc[Try] to _Failure_ if its a _Success_ with an empty _value_ . Otherwise acts as identity operator.
+Maps this xref:refguide:commons:index/functional/Try.adoc[Try] to _Failure_ if this is a _Success_ with an empty _value_ . Otherwise acts as identity operator.
 --
 <.> xref:#map__Function_Function[map(Function, Function)]
 +
@@ -91,12 +91,12 @@ Maps the contained _value_ or _failure_ to a new value of type _R_ using accordi
 <.> xref:#thenCall__Callable[thenCall(Callable)]
 +
 --
-If its a _Success_ , maps it to another based on given _Callable_ . Otherwise if its a _Failure_ acts as identity operator.
+If this is a _Success_ , maps it to another based on given _Callable_ . Otherwise if its a _Failure_ acts as identity operator.
 --
 <.> xref:#thenRun__ThrowingRunnable[thenRun(ThrowingRunnable)]
 +
 --
-If its a _Success_ , maps it to another based on given _ThrowingRunnable_ . Otherwise if its a _Failure_ acts as identity operator.
+If this is a _Success_ , maps it to another based on given _ThrowingRunnable_ . Otherwise if its a _Failure_ acts as identity operator.
 --
 
 == Members
@@ -104,22 +104,22 @@ If its a _Success_ , maps it to another based on given _ThrowingRunnable_ . Othe
 [#getValue__]
 === getValue()
 
-Optionally returns the contained _value_ based on presence, that is, if its a _Success_ and the value is not _null_ .
+Optionally returns the contained _value_ based on presence, that is, if this is a _Success_ and the value is not _null_ .
 
 [#getFailure__]
 === getFailure()
 
-Optionally returns the contained _failure_ based on presence, that is, if its a _Failure_ .
+Optionally returns the contained _failure_ based on presence, that is, if this is a _Failure_ .
 
 [#ifSuccess__Consumer]
 === ifSuccess(Consumer)
 
-Peeks into the _value_ if its a _Success_ .
+Peeks into the _value_ if this is a _Success_ .
 
 [#ifFailure__Consumer]
 === ifFailure(Consumer)
 
-Peeks into the _failure_ if its a _Failure_ .
+Peeks into the _failure_ if this is a _Failure_ .
 
 [#ifFailureFail__]
 === ifFailureFail()
@@ -134,17 +134,17 @@ Throws _NoSuchElementException_ if _value_ is _null_ .
 [#mapSuccess__Function]
 === mapSuccess(Function)
 
-Maps this xref:refguide:commons:index/functional/Try.adoc[Try] to another if its a _Success_ . Otherwise if its a _Failure_ acts as identity operator.
+Maps this xref:refguide:commons:index/functional/Try.adoc[Try] to another if this is a _Success_ . Otherwise if this is a _Failure_ acts as identity operator.
 
 [#mapFailure__UnaryOperator]
 === mapFailure(UnaryOperator)
 
-Maps this xref:refguide:commons:index/functional/Try.adoc[Try] to another if its a _Failure_ . Otherwise if its a _Success_ acts as identity operator.
+Maps this xref:refguide:commons:index/functional/Try.adoc[Try] to another if its a _Failure_ . Otherwise if this is a _Success_ acts as identity operator.
 
 [#mapEmptyToFailure__]
 === mapEmptyToFailure()
 
-Maps this xref:refguide:commons:index/functional/Try.adoc[Try] to _Failure_ if its a _Success_ with an empty _value_ . Otherwise acts as identity operator.
+Maps this xref:refguide:commons:index/functional/Try.adoc[Try] to _Failure_ if this is a _Success_ with an empty _value_ . Otherwise acts as identity operator.
 
 [#map__Function_Function]
 === map(Function, Function)
@@ -159,9 +159,9 @@ Maps the contained _value_ or _failure_ to a new value of type _R_ using accordi
 [#thenCall__Callable]
 === thenCall(Callable)
 
-If its a _Success_ , maps it to another based on given _Callable_ . Otherwise if its a _Failure_ acts as identity operator.
+If this is a _Success_ , maps it to another based on given _Callable_ . Otherwise if its a _Failure_ acts as identity operator.
 
 [#thenRun__ThrowingRunnable]
 === thenRun(ThrowingRunnable)
 
-If its a _Success_ , maps it to another based on given _ThrowingRunnable_ . Otherwise if its a _Failure_ acts as identity operator.
+If this is a _Success_ , maps it to another based on given _ThrowingRunnable_ . Otherwise if its a _Failure_ acts as identity operator.
