--- a/antora/components/refguide-index/modules/applib/pages/index/layout/grid/bootstrap/BSCol.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/layout/grid/bootstrap/BSCol.adoc
@@ -1,18 +1,18 @@
-= BS3Col
+= BSCol
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
 A column within a row which, depending on its _#getSpan()_ , could be as narrow as 1/12th of the page's width, all the way up to spanning the entire page.
 
-Pretty much other content can be contained within a column, though most commonly it will be xref:refguide:applib:index/layout/component/FieldSet.adoc[FieldSet] s (a group of properties) or xref:refguide:applib:index/layout/component/CollectionLayoutData.adoc[CollectionLayoutData] s. However, columns can also be used to contain further xref:refguide:applib:index/layout/grid/bootstrap3/BS3Row.adoc[BS3Row] s (creating a nested grid of rows/cols/rows/cols) and xref:refguide:applib:index/layout/grid/bootstrap3/BS3TabGroup.adoc[BS3TabGroup] s.
+Pretty much other content can be contained within a column, though most commonly it will be xref:refguide:applib:index/layout/component/FieldSet.adoc[FieldSet] s (a group of properties) or xref:refguide:applib:index/layout/component/CollectionLayoutData.adoc[CollectionLayoutData] s. However, columns can also be used to contain further xref:refguide:applib:index/layout/grid/bootstrap/BSRow.adoc[BSRow] s (creating a nested grid of rows/cols/rows/cols) and xref:refguide:applib:index/layout/grid/bootstrap/BSTabGroup.adoc[BSTabGroup] s.
 
 It is rendered as a (eg) <div class="col-md-4 ...">
 
 == API
 
 [source,java]
-.BS3Col.java
+.BSCol.java
 ----
-class BS3Col {
+class BSCol {
   String getId()     // <.>
   void setId(String id)
   int getSpan()
@@ -27,10 +27,10 @@ class BS3Col {
   void setSizeSpans(List<SizeSpan> sizeSpans)
   List<ActionLayoutData> getActions()
   void setActions(List<ActionLayoutData> actions)
-  List<BS3Row> getRows()
-  void setRows(List<BS3Row> rows)
-  List<BS3TabGroup> getTabGroups()
-  void setTabGroups(List<BS3TabGroup> tabGroups)
+  List<BSRow> getRows()
+  void setRows(List<BSRow> rows)
+  List<BSTabGroup> getTabGroups()
+  void setTabGroups(List<BSTabGroup> tabGroups)
   List<FieldSet> getFieldSets()
   void setFieldSets(List<FieldSet> fieldSets)
   List<CollectionLayoutData> getCollections()
@@ -87,7 +87,7 @@ Any layout must have precisely one column or xref:refguide:applib:index/layout/c
 
 Whether this column should be used to hold any unreferenced collections (contributed or "native").
 
-Any layout must have precisely one column or xref:refguide:applib:index/layout/grid/bootstrap3/BS3TabGroup.adoc[BS3TabGroup] that has this attribute set.
+Any layout must have precisely one column or xref:refguide:applib:index/layout/grid/bootstrap/BSTabGroup.adoc[BSTabGroup] that has this attribute set.
 
 [#getDomainObject__]
 === getDomainObject()
