--- a/antora/components/refguide-index/modules/applib/pages/index/layout/grid/bootstrap/BSElement.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/layout/grid/bootstrap/BSElement.adoc
@@ -1,38 +1,26 @@
-= BS3Tab
+= BSElement _(interface)_
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
-
-Represents a tab within a xref:refguide:applib:index/layout/grid/bootstrap3/BS3TabGroup.adoc[BS3TabGroup] .
-
-They simply contain one or more xref:refguide:applib:index/layout/grid/bootstrap3/BS3Row.adoc[BS3Row] s.
 
 == API
 
 [source,java]
-.BS3Tab.java
+.BSElement.java
 ----
-class BS3Tab {
-  String getName()
-  void setName(String name)
-  List<BS3Row> getRows()
-  void setRows(List<BS3Row> rows)
-  BS3TabOwner getOwner()     // <.>
-  void setOwner(BS3TabOwner owner)
-  BS3Grid getGrid()
-  String toString()
+interface BSElement {
+  String getCssClass()     // <.>
+  void setCssClass(String cssClass)
 }
 ----
 
-<.> xref:#getOwner__[getOwner()]
+<.> xref:#getCssClass__[getCssClass()]
 +
 --
-Owner.
+Any additional CSS classes to render on the page element corresponding to this object, eg as per theBootstrap mixinsor just for custom styling.
 --
 
 == Members
 
-[#getOwner__]
-=== getOwner()
+[#getCssClass__]
+=== getCssClass()
 
-Owner.
-
-Set programmatically by framework after reading in from XML.
+Any additional CSS classes to render on the page element corresponding to this object, eg as per theBootstrap mixinsor just for custom styling.
