--- a/antora/components/refguide-index/modules/applib/pages/index/layout/grid/bootstrap/BSTabGroup.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/layout/grid/bootstrap/BSTabGroup.adoc
@@ -1,25 +1,25 @@
-= BS3TabGroup
+= BSTabGroup
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-Represents a tab group containing one or more xref:refguide:applib:index/layout/grid/bootstrap3/BS3Tab.adoc[BS3Tab] s.
+Represents a tab group containing one or more xref:refguide:applib:index/layout/grid/bootstrap/BSTab.adoc[BSTab] s.
 
 == API
 
 [source,java]
-.BS3TabGroup.java
+.BSTabGroup.java
 ----
-class BS3TabGroup {
+class BSTabGroup {
   Boolean isUnreferencedCollections()     // <.>
   void setUnreferencedCollections(Boolean unreferencedCollections)
   Boolean isCollapseIfOne()     // <.>
   void setCollapseIfOne(Boolean collapseIfOne)
-  List<BS3Tab> getTabs()
-  void setTabs(List<BS3Tab> tabs)
-  BS3TabGroupOwner getOwner()     // <.>
-  void setOwner(BS3TabGroupOwner owner)
+  List<BSTab> getTabs()
+  void setTabs(List<BSTab> tabs)
+  BSTabGroupOwner getOwner()     // <.>
+  void setOwner(BSTabGroupOwner owner)
   String getMetadataError()     // <.>
   void setMetadataError(String metadataError)
-  BS3Grid getGrid()
+  BSGrid getGrid()
 }
 ----
 
@@ -51,7 +51,7 @@ For diagnostics; populated by the framework if and only if a metadata error.
 
 Whether this tab group should be used to hold any unreferenced collections (contributed or "native").
 
-Any layout must have precisely one tab group or xref:refguide:applib:index/layout/grid/bootstrap3/BS3Col.adoc[BS3Col] that has this attribute set.
+Any layout must have precisely one tab group or xref:refguide:applib:index/layout/grid/bootstrap/BSCol.adoc[BSCol] that has this attribute set.
 
 [#isCollapseIfOne__]
 === isCollapseIfOne()
