--- a/antora/components/refguide-index/modules/applib/pages/index/services/menu/MenuBarsLoaderService.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/menu/MenuBarsLoaderService.adoc
@@ -1,7 +1,7 @@
 = MenuBarsLoaderService _(interface)_
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-Returns the xref:refguide:applib:index/layout/menubars/bootstrap3/BS3MenuBars.adoc[BS3MenuBars] instance (bootstrap3-specific subtype of _org.apache.isis.applib.layout.menubars.MenuBars_ , for the UI.
+Returns the xref:refguide:applib:index/layout/menubars/bootstrap/BSMenuBars.adoc[BSMenuBars] instance (bootstrap3-specific subtype of _org.apache.isis.applib.layout.menubars.MenuBars_ , for the UI.
 
 The default implementation deserializes the `menubars.layout.xml` file read from the classpath.
 
@@ -14,7 +14,7 @@ The service is _called_ by the default implementation of xref:refguide:applib:in
 ----
 interface MenuBarsLoaderService {
   boolean supportsReloading()     // <.>
-  BS3MenuBars menuBars()     // <.>
+  BSMenuBars menuBars()     // <.>
 }
 ----
 
@@ -26,7 +26,7 @@ Whether dynamic reloading of layouts is enabled.
 <.> xref:#menuBars__[menuBars()]
 +
 --
-Returns a new instance of a xref:refguide:applib:index/layout/menubars/bootstrap3/BS3MenuBars.adoc[BS3MenuBars] if possible, else `null` .
+Returns a new instance of a xref:refguide:applib:index/layout/menubars/bootstrap/BSMenuBars.adoc[BSMenuBars] if possible, else `null` .
 --
 
 == Members
@@ -41,7 +41,7 @@ If not, then the calling xref:refguide:applib:index/services/menu/MenuBarsServic
 [#menuBars__]
 === menuBars()
 
-Returns a new instance of a xref:refguide:applib:index/layout/menubars/bootstrap3/BS3MenuBars.adoc[BS3MenuBars] if possible, else `null` .
+Returns a new instance of a xref:refguide:applib:index/layout/menubars/bootstrap/BSMenuBars.adoc[BSMenuBars] if possible, else `null` .
 
 include::hooks/MenuBarsLoaderService_010-implementation.adoc[]
 
