--- a/antora/components/comguide/modules/ROOT/pages/post-release-successful.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/post-release-successful.adoc
@@ -376,7 +376,7 @@ We are now in a position to actually generate the Antora website.
 ----
 git checkout $ISISBRANCH
 pushd isis-parent
-mvn clean install -DskipTests -Dmodule-all
+mvn clean install -DskipTests -Dreleased
 popd
 mvn clean install -pl core/config
 mvn -D module-tooling -D skip.essential install -DskipTests
