ISIS-2445: rename artifact isis-parent -> isis-bom
- as this is the Bill of Material

--- a/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-RC1/mignotes.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-RC1/mignotes.adoc
@@ -53,3 +53,18 @@ and introducing `Railway<F, S>`
 
 |===
 
+== Maven
+
+Following Maven artifacts changed:
+[cols="2a,3a", options="header"]
+
+|===
+
+| previously
+| new
+
+| `org.apache.isis:isis-parent` renamed
+| renamed to `org.apache.isis:isis-bom` 
+
+|===
+
